--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,24 @@
     padding-bottom: 10px;
     width: 80%;
     line-height: 1.5;
-  
+
   }
-  
+
   .skills {
     margin: auto;
     padding-bottom: 10px;
     width: 50%;
     line-height: 2;
+    text-align: left;
   }
-  
+
   .code-example {
     margin: auto;
     padding-bottom: 10px;
     width: 80%;
     line-height: 2;
   }
-  
+
   .ex-ed {
     margin: auto;
     width: 80%;
@@ -43,29 +44,29 @@
     /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
     color: #40514e;
     text-align: center;
-  
+
   }
-  
+
   header {
     padding-top: 15px;
     padding-bottom: 15px;
     background-color: #abcfcf;
   }
-  
+
   main {
     margin: auto;
     padding-top: 15px;
     padding-bottom: 15px;
     width: 60%;
   }
-  
+
   footer {
     padding-top: 15px;
     padding-bottom: 15px;
     background-color: #66bfbf;
     color: #eaf6f6;
   }
-  
+
   h2 {
     color: #3e8b8b;
     text-align: center;
@@ -77,4 +78,8 @@
   }
   pre {
     text-align: left;
+  }
+
+  li {
+    list-style-type: none;
   }
